--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,9 @@ html, body {
 	margin: 0;
 	padding: 0;
 	background-color: #373F51;
-	font-family: 'Palanquin', sans-serif;
-	font-weight: 100;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 200;
 	font-size: 16px;
-	background-image: url('../img/dickbutt.png');
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: auto 100%;
 }
 
 p {
@@ -76,15 +72,15 @@ p {
 }
 
 .subtitle {
-	padding: 20px 0 0 0;
+	padding: 40px 0 0 0;
 }
 
 .languages {
-	padding: 5px 0 0 0;
+	padding: 15px 0 0 0;
 }
 
 .location {
-	padding: 30px 0 20px 0;
+	padding: 40px;
 	font-size: 14px;
 }
 
